--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "2.0.2",
   "description": "Rollup plugin to import css files as lit-element tagged css objects.",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
     "watch": "nodemon -x 'npm test'",
     "test": "tape -r esm test/test.js | tap-summary"
   },
+  "files": [
+    "src",
+    "test",
+    "index.js",
+    "index.d.ts"
+  ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "tag": "latest"
