--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "include": ["src"],
   "exclude": ["node_modules"],
-  "compileOnSave": true,
   "compilerOptions": {
     "outDir": ".",
     "declaration": true,
-    "module": "commonjs",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "module": "esnext",
     "target": "ES2018"
   }
 }
